// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate 1`] = `
Object {
  "name": "notification_permission",
  "variables": Object {
    "granted": true,
  },
}
`;

exports[`validate not determined yet 1`] = `
Object {
  "name": "notification_permission",
  "variables": Object {
    "granted": null,
  },
}
`;

exports[`validate not granted 1`] = `
Object {
  "name": "notification_permission",
  "variables": Object {
    "granted": false,
  },
}
`;
